@@ -159,3 +159,6 @@ IMG_AWESOME_EOT=fonts/icomoon.eot
 IMG_AWESOME_WOFF=fonts/icomoon.woff
 IMG_AWESOME_TTF=fonts/icomoon.ttf
 IMG_AWESOME_SVG=fonts/icomoon.svg
+
+CMD_TWOSTEP_AUTH=user/twostep_auth.html
+CMD_ASK_TWOSTEP_AUTH=user/ask_security_question.html  
