@@ -479,3 +479,92 @@
 479=Invalid Email limit
 480=It must be a positive integer.
 481= / Day
+482=Unable to change the Message System E-Mail Address
+483=Counted
+484=Pop
+485=Imap
+486=Unable to show current E-Mail usage
+487=Username changed to lower case.
+488=Key Created. Take note of it's value and keep it safe.
+489=Cannot Modify Key
+490=Key Modified. If you've modified it's value, take note of it and keep it safe.
+491=Key(s) Deleted
+492=Error Deleting Key(s)
+493=Error Creating Key
+494=Error Resetting Key Uses
+495=Key Uses Reset
+496=Login Keys are disabled
+497=Systems Quotas are size 0.  See <a target=_blank href="http://help.directadmin.com/item.php?id=42">this guide</a> to fix it.
+498=&nbsp; (Today: %lld)
+499=Reset Today
+500=Only Admins can reset the usage count
+501=%s appears to be a link. Aborting.
+502=Error Deleting %s
+503=Today's E-Mail count has been reset for User %s
+504=The following file could not be found.  No reset required.
+505=Error saving Cron E-Mail
+506=Cron E-Mail set
+507=View previous sort
+508=Tickets removed
+509=Login Keys
+510=Date Suspended
+511=Local Mail
+512=Save Limit
+513=Unable to set the E-Mail Limit
+514=E-Mail Limt has been set
+515=reseller_can_set_email_limit=0 is set, thus you cannot set a limit
+516=Set 0 for unlimited.  Set a blank value to reset to default.
+517= and %d Users
+518=Service
+519=Status
+520=Memory Usage
+521=Cannot find IP
+522=IP Link Added
+523=IP Link(s) Removed
+524=The Users display cache will be updated momentarily.
+525=Security Questions are disabled
+526=Error setting Security Question
+527=Security Question set
+528=Please select 1 Security Question
+529=Error deleting Security Questions
+530=Security Questions deleted
+531=Error Writing %s
+532=Error with Security Questions
+533=Cron Jobs Duplicated
+534=Error setting PHP versions
+535=PHP versions saved
+536=Cron Jobs will run in the background
+537=Inodes
+538=Last Tally Completion
+539=UserDir: %s
+540=DNSSEC is not enabled
+541=Error generating zone keys
+542=Zone keys generated
+543=Error signing zone
+544=Zone signed
+545=Back
+546=Cannot manage zone
+547=Zone is of type DNSSEC. Edit the zone on the master server.<br>%sClick Here%s to view the local raw zone data
+548=MySQL is not enabled on this server
+549=Archives purged
+550=Error purging archives
+551=<b>|</b>
+552=Leave DNS
+553=%sThis will skip the removal of the dns zone, leaving it in place.%s
+554=%s Edit the User Welcome Message to ensure the subject and message are set.
+555=Invalid Log Rotate Value: %d
+556=The maximum value is %d
+557=Invalid Session Minutes value: %d
+558=Unable to Locate that domain
+559=User DNSSEC Control is disabled
+560=Error Unblocking paths
+561=Paths Unblocked
+562=Double click for main domain page
+563=Nginx is not enabled
+564=Settings
+565=Error with Two-Step Authentication
+566=Two-Step Authentication is disabled
+567=Error generating scratch codes
+568=Scratch codes
+569=%s Removed
+570=Trust cookie has been cleared
